--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <title></title>
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="https://rokovoko.github.io/cours-compte/css/reset.css">
+    <link rel="stylesheet" href="https://rokovoko.github.io/cours-compte/css/index.css">
   </head>
   <body>
 
     <div id="wrapper">
       <div class="left">
         <div class="card">
-          <div class="zero"><img src="./img/logo.png" alt="cours des comptes"></div>
+          <div class="zero"><img src="https://rokovoko.github.io/cours-compte/img/logo.png" alt="cours des comptes"></div>
           <div class="one">L'ETAT</div>
           <div class="two">ACTIONNAIRE</div>
           <div class="three">PRINCIPALES PARTICIPATIONS</div>
@@ -25,6 +25,6 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="/js/index.js"></script>
+    <script type="text/javascript" src="https://rokovoko.github.io/cours-compte/js/index.js"></script>
   </body>
 </html>
