--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
       <div class="right">
       </div>
     </div>
-    <canvas id="canvas" width="300" height="300"></canvas>
+    <canvas id="ctx" width="300" height="300"></canvas>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://rokovoko.github.io/cours-compte/js/index.js"></script>
+    <!--<script type="text/javascript" src="https://rokovoko.github.io/cours-compte/js/index.js"></script>-->
+    <script type="text/javascript" src="./js/index.js"></script>
   </body>
 </html>
