--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title></title>
     <!--<link rel="stylesheet" href="https://rokovoko.github.io/cours-compte/css/reset.css">-->
-    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="https://rokovoko.github.io/cours-compte/css/reset.css">
     <!--<link rel="stylesheet" href="https://rokovoko.github.io/cours-compte/css/index.css">-->
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="https://rokovoko.github.io/cours-compte/css/index.css">
   </head>
   <body>
 
@@ -69,6 +69,6 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <!--<script type="text/javascript" src="https://rokovoko.github.io/cours-compte/js/index.js"></script>-->
-    <script type="text/javascript" src="./js/index.js"></script>
+    <script type="text/javascript" src="https://rokovoko.github.io/cours-compte/js/index.js"></script>
   </body>
 </html>
