--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title></title>
     <!--<link rel="stylesheet" href="https://rokovoko.github.io/cours-compte/css/reset.css">-->
-    <link rel="stylesheet" href="https://rokovoko.github.io/cours-compte/css/reset.css">
+    <link rel="stylesheet" href="./css/reset.css">
     <!--<link rel="stylesheet" href="https://rokovoko.github.io/cours-compte/css/index.css">-->
-    <link rel="stylesheet" href="https://rokovoko.github.io/cours-compte/css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
   </head>
   <body>
 
@@ -14,10 +14,11 @@
       <div class="left">
         <div class="card">
           <div class="zero"><img src="https://rokovoko.github.io/cours-compte/img/logo.png" alt="cours des comptes"></div>
-          <div class="one">L'ETAT</div>
+          <div class="one">L'ÉTAT</div>
           <div class="two">ACTIONNAIRE</div>
           <div class="three">PRINCIPALES PARTICIPATIONS</div>
           <div class="four">PUBLIQUES DANS LES ENTREPRISES</div>
+          <div class="five"></div>
         </div>
       </div>
       <div class="right jumbotron jumbotron-icon">
@@ -34,7 +35,7 @@
               <span class="auto"></span>
             </li>
             <li class="operateur-fiche">
-              <span>OPERATEUR :</span>
+              <span>OPÉRATEUR :</span>
               <span class="auto"></span>
             </li>
             <li class="secteur-fiche">
@@ -44,7 +45,7 @@
           </ul>
           <div>
             <div class="left-fiche">
-              <div>POURCENTAGE DE DETENTION DU CAPITAL :</div>
+              <div>POURCENTAGE DE DÉTENTION DU CAPITAL :</div>
               <div class="pie-chart">
                 <canvas id="ctx" width="100" height="100"></canvas>
                 <div class="legend">10,7</div>
@@ -63,12 +64,12 @@
             <div class="icon"></div>
             <span class="text">RETOUR</span>
           </span>
-          <span class="date">DONNEES A FIN 2015</span>
+          <span class="date">DONNÉES A FIN 2015</span>
         </footer>
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <!--<script type="text/javascript" src="https://rokovoko.github.io/cours-compte/js/index.js"></script>-->
-    <script type="text/javascript" src="https://rokovoko.github.io/cours-compte/js/index.js"></script>
+    <script type="text/javascript" src="./js/index.js"></script>
   </body>
 </html>
