--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <!--<link rel="stylesheet" href="https://rokovoko.github.io/cours-compte/css/reset.css">-->
+    <!--<link rel="stylesheet" href="./css/reset.css">-->
     <link rel="stylesheet" href="./css/reset.css">
-    <!--<link rel="stylesheet" href="https://rokovoko.github.io/cours-compte/css/index.css">-->
+    <!--<link rel="stylesheet" href="./css/index.css">-->
     <link rel="stylesheet" href="./css/index.css">
   </head>
   <body>
@@ -13,7 +13,7 @@
     <div id="wrapper">
       <div class="left">
         <div class="card">
-          <div class="zero"><img src="https://rokovoko.github.io/cours-compte/img/logo.png" alt="cours des comptes"></div>
+          <div class="zero"><img src="./img/logo.png" alt="cours des comptes"></div>
           <div class="one">L'ÉTAT</div>
           <div class="two">ACTIONNAIRE</div>
           <div class="three">PRINCIPALES PARTICIPATIONS</div>
@@ -21,7 +21,7 @@
           <div class="five"></div>
         </div>
       </div>
-      <div class="right jumbotron jumbotron-icon">
+      <div class="right">
         <div class="selector">
 
         </div>
@@ -69,7 +69,7 @@
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <!--<script type="text/javascript" src="https://rokovoko.github.io/cours-compte/js/index.js"></script>-->
+    <!--<script type="text/javascript" src="./js/index.js"></script>-->
     <script type="text/javascript" src="./js/index.js"></script>
   </body>
 </html>
