Fix : first wave

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     <div id="wrapper">
       <div class="left">
         <div class="card">
-          <div class="zero"><img src="./img/logo.png" alt="cours des comptes"></div>
+          <div class="zero"><img src="https://rokovoko.github.io/cours-compte/img/logo.png" alt="cours des comptes"></div>
           <div class="one">L'ÉTAT</div>
           <div class="two">ACTIONNAIRE</div>
           <div class="three">PRINCIPALES PARTICIPATIONS</div>
           <div class="four">PUBLIQUES DANS LES ENTREPRISES</div>
-          <div class="five"></div>
+          <div class="five"><a href="http://rokovoko.fr/" target="_blanck">
+            <img src="https://rokovoko.github.io/cours-compte/img/rokovoko.png"/>
+          </a></div>
         </div>
       </div>
       <div class="right">
@@ -31,7 +33,7 @@
               <div></div>
             </li>
             <li class="entreprise-fiche">
-              <span>ENTREPRISES :</span>
+              <span>ENTREPRISE :</span>
               <span class="auto"></span>
             </li>
             <li class="operateur-fiche">
@@ -52,7 +54,7 @@
               </div>
             </div>
             <div class="right-fiche">
-              <div>CHIFFRE<br /> D'AFFAIRE :</div>
+              <div>CHIFFRE<br /> D'AFFAIRES :</div>
               <div class="number"></div>
               <div>Millions d'€</div>
             </div>
@@ -64,12 +66,12 @@
             <div class="icon"></div>
             <span class="text">RETOUR</span>
           </span>
-          <span class="date">DONNÉES A FIN 2015</span>
+          <span class="date">Données à fin 2015</span>
         </footer>
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <!--<script type="text/javascript" src="./js/index.js"></script>-->
-    <script type="text/javascript" src="./js/index.js"></script>
+    <script type="text/javascript" src="https://rokovoko.github.io/cours-compte/js/index.js"></script>
   </body>
 </html>
