--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="two">ACTIONNAIRE</div>
           <div class="three">PRINCIPALES PARTICIPATIONS</div>
           <div class="four">PUBLIQUES DANS LES ENTREPRISES</div>
-          <div class="five"><a href="http://rokovoko.fr/" target="_blanck">
+          <div class="five">réalisé par<br/><a href="http://rokovoko.fr/" target="_blanck">
             <img src="https://rokovoko.github.io/cours-compte/img/rokovoko.png"/>
           </a></div>
         </div>
@@ -56,7 +56,7 @@
             <div class="right-fiche">
               <div>CHIFFRE<br /> D'AFFAIRES :</div>
               <div class="number"></div>
-              <div>Millions d'€</div>
+              <div>millions d'€</div>
             </div>
           </div>
         </div>
@@ -71,7 +71,7 @@
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <!--<script type="text/javascript" src="./js/index.js"></script>-->
-    <script type="text/javascript" src="https://rokovoko.github.io/cours-compte/js/index.js"></script>
+    <!--<script type="text/javascript" src="https://rokovoko.github.io/cours-compte/js/index.js"></script>-->
+    <script type="text/javascript" src="./js/index.js"></script>
   </body>
 </html>
