Fix : operateur to actionnaire

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <span class="auto"></span>
             </li>
             <li class="operateur-fiche">
-              <span>OPÉRATEUR :</span>
+              <span>ACTIONNAIRE :</span>
               <span class="auto"></span>
             </li>
             <li class="secteur-fiche">
