--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
           <div class="one">L'ÉTAT</div>
           <div class="two">ACTIONNAIRE</div>
           <div class="three">PRINCIPALES PARTICIPATIONS</div>
-          <div class="four">PUBLIQUES DANS LES ENTREPRISES</div>
+          <div class="four">
+            PUBLIQUES DANS LES ENTREPRISES<br />
+            <img src="./img/click.png" />
+          </div>
           <div class="five">réalisé par<br/><a href="http://rokovoko.fr/" target="_blanck">
             <img src="https://rokovoko.github.io/cours-compte/img/rokovoko.png"/>
           </a></div>
@@ -25,7 +28,6 @@
       </div>
       <div class="right">
         <div class="selector">
-
         </div>
         <div class="selected">
           <ul>
