--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           <div class="two">ACTIONNAIRE</div>
           <div class="three">PRINCIPALES PARTICIPATIONS</div>
           <div class="four">
-            PUBLIQUES DANS LES ENTREPRISES<br />
-            <img src="./img/click.png" />
+            PUBLIQUES DANS LES ENTREPRISES
           </div>
+          <div class="fourbis">CLIQUEZ SUR UN VISUEL<br />POUR LE SÉLECTIONNER</div>
           <div class="five">réalisé par<br/><a href="http://rokovoko.fr/" target="_blanck">
             <img src="https://rokovoko.github.io/cours-compte/img/rokovoko.png"/>
           </a></div>
